[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.13.2", features = ["wayland"]}
bevy_framepace = "0.15.0"
json = "0.12.4"
serde_json = "1.0.117"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# [features]
# default = ["bevy/dynamic_linking"]